# CosyVoice

./: .env  .gitignore  CLAUDE.md  DEPENDENCIES.md  Debugging Flow ODE Amplification.md  Debugging Prompt Leakage & Audio Glitches.md  FAQ.md  GEMINI.md  Implementing FP16 Optimizations.md  README.md  audit_py_artifact.py  benchmark.sh  benchmark_improved.sh  benchmark_performance.py  benchmark_python.py  chat_export.md  chat_export_2025-01-10.md  codex-chat.md  compare_audio.py  compare_bins.py  cosyvoice_native_rust_tts_reference.md  cosyvoice_systems_design.md  example.py  experiment_vocoder_params.py  haynes_manual_python_tts.md  inspect_onnx.py  output.txt  pyproject.toml  requirements.txt  run_benchmark_comparison.sh  run_cuda.sh  rust_final_check.txt  rust_final_check_3.txt  rust_final_check_4.txt  rust_flow_debug.safetensors  rust_intermediates.safetensors  rust_test_output.txt  rust_test_output_2.txt  rust_test_output_3.txt  rust_test_output_4.txt  (+7 more)
.agent/: performance_report.md  research_log.md  session_summary.md
.agent/docs/: architecture.md  onboarding.md  upstream_sync_summary.md  walkthrough.md
.claude/: README.md
.claude/agents/: codebase-analyzer.md  feature-implementer.md  formatter.md  git-workflow-manager.md  github-issue-manager.md  github-workflow-orchestrator.md  knowledge-extractor.md  lint-fixer.md  test-runner.md
cosyvoice/cli/: cosyvoice.py  frontend.py  model.py
cosyvoice/compat/: __init__.py  matcha_compat.py
cosyvoice/flow/: decoder.py  flow.py  flow_matching.py
cosyvoice/hifigan/: discriminator.py  hifigan.py
cosyvoice/llm/: llm.py
cosyvoice/transformer/: attention.py
cosyvoice/utils/: class_utils.py  common.py  file_utils.py  gpu_optimizer.py
debug_scripts/: analyze_profile.py  benchmark_alternatives.py  benchmark_wetext.py  check_candle.py  check_hift_header.py  check_ln_behavior.py  check_rope.py  check_wetext.py  debug_flow_layers.py  debug_flow_mel.py  debug_hift_stages.py  debug_llm_parity.py  debug_paths.py  debug_tensors.py  dump_frontend.py  dump_hift_weights.py  experiment_vocoder_params.py  export_conversations.py  extract_sinegen_noise.py  extract_source_for_injection.py  fix_config.py  fix_model_names.py  generate_fresh_artifacts.py  generate_verification_artifacts.py  postprocess_audio.py  postprocess_audio_v2.py  test_candle_final.py  test_candle_load.py  test_candle_native.py  test_candle_new.py  test_candle_pt.py  test_candle_vb.py  test_candle_vb_debug.py  test_candle_vb_fix.py  test_default_prompt.py  test_direct_safetensors.py  test_f0_parity.py  test_flow.py  test_full_pipeline.py  test_hift.py  (+24 more)
docs/: DEVELOPMENT_PROTOCOLS.md  bridge_server_parity.md  native_llm_parity_guide.md  native_parity_next_steps.md  parity_harness.md
docs/adr/: ADR-001-native-llm-parity.md
output/: README.md
outputs/debug/: python_intermediates.safetensors
runtime/python/fastapi/: server.py
runtime/python/grpc/: server.py
rust/: Cargo.toml  README.md  debug_artifacts.safetensors  parity_output.txt  rust_intermediates.safetensors  start-server.sh
rust/.cargo/: config.toml
rust/bridge-server/: Cargo.toml
rust/bridge-server/src/: main.rs  tts.rs
rust/client/: Cargo.toml
rust/client/src/: main.rs
rust/native-server/: Cargo.toml  debug_artifacts.safetensors  debug_parity.txt  test_input.txt  test_log.txt
rust/native-server/.agent/docs/: architecture.md  clippy-fixes-2026-01-06.md  handoff-2026-01-06.md  onboarding.md
rust/native-server/assets/: mel_filters.npz
rust/native-server/src/: audio.rs  cosyvoice_flow.rs  cosyvoice_llm.rs  flow.rs  hift.rs  lib.rs  logging.rs  main.rs  onnx_flow.rs  onnx_frontend.rs  quantized_qwen.rs  qwen.rs  qwen_special_tokens.rs  text_frontend.rs  text_processing.rs  tts.rs  utils.rs
rust/native-server/tests/: llm_length_parity.rs  text_frontend_parity.rs
rust/server/: Cargo.toml
rust/server/src/: audio.rs  cosyvoice_flow.rs  cosyvoice_llm.rs  flow.rs  hift.rs  lib.rs  main.rs  native_tts.rs  onnx_frontend.rs  qwen.rs  tts.rs  utils.rs
rust/shared/: Cargo.toml
rust/shared/src/: lib.rs
scripts/: check_mel_stats.py  export_rand_noise.py
tests/: analyze_audio.py  audio_comparison.json  compare_flow.py  compare_flow_manual.py  compare_intermediates.py  compare_python_rust_inference.py  debug_flow_divergence.py  debug_hift.py  debug_input_embedding.py  generate_test_artifacts.py  inspect_artifacts.py  list_tensors.py  matcha_parity_tests.py  test_hift_parity.py  test_import_dit.py  test_rust_backend_real.py  test_rust_server_e2e.py  verify_fixes.py  verify_flow_rust.py
tests/hift_parity/: python_intermediates.safetensors
tests/python_inference_metrics/: metrics.json
tools/: compare_hift_intermediates.py  convert_hift.py  convert_llm_pt_to_safetensors.py  count_tokens.py  export_f0_predictor_torchscript.py  export_llm_inputs.py  hift_parity_check.py  inspect_model.py  llm_length_parity.py  profile_tts.py  run_parity_harness.sh  run_rust_parity_only.sh  smoke_test_bridge.sh  test_gpu_optimizer.py  text_normalize_parity.py  verify_flash_attn.sh
