[workspace]
name = "cosyvoice"
version = "3.0.0"
description = "Fun-CosyVoice3 Text-to-Speech System - Zero-shot multilingual speech synthesis based on large language models"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "FunAudioLLM", email = "cosyvoice@alibaba-inc.com"}
]
keywords = ["tts", "speech-synthesis", "voice-cloning", "llm", "cosyvoice"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# [workspace.urls]
# Homepage = "https://github.com/FunAudioLLM/CosyVoice"
# Documentation = "https://funaudiollm.github.io/cosyvoice3/"
# Repository = "https://github.com/FunAudioLLM/CosyVoice"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cosyvoice*"]

# ============================================================================
# Pixi Configuration
# ============================================================================

[tool.pixi.workspace]
name = "cosyvoice"
channels = ["pytorch", "nvidia", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = "3.12.*"
numpy = "<2.0"
pip = "*"
pytorch = ">=2.3.0"
pytorch-cuda = ">=12.1"
torchaudio = ">=2.3.0"
sox = "*"
libsndfile = "*"
ffmpeg = ">=6.0"
openh264 = "*"

[tool.pixi.pypi-dependencies]
# Core ML dependencies
conformer = ">=0.3.2"
diffusers = ">=0.29.0"
transformers = ">=4.54.0"
x-transformers = ">=2.11.24"

# Audio processing
numba = ">=0.60.0"
librosa = ">=0.10.2"
soundfile = ">=0.12.1"
pyworld = ">=0.3.4"

# Web/API frameworks
fastapi = ">=0.115.6"
fastapi-cli = ">=0.0.4"
gradio = ">=5.4.0"
uvicorn = ">=0.30.0"
grpcio = ">=1.57.0"
grpcio-tools = ">=1.57.0"
pydantic = ">=2.7.0"
protobuf = ">=4.25"

# Configuration & utilities
hydra-core = ">=1.3.2"
HyperPyYAML = ">=1.2.2"
omegaconf = ">=2.3.0"

# Data processing
numpy = ">=1.26.4,<2.0"
pyarrow = ">=18.1.0"
networkx = ">=3.1"

# Model download & management
modelscope = ">=1.20.0"
gdown = ">=5.1.0"
wget = ">=3.2"

# Text processing
inflect = ">=7.3.1"
wetext = ">=0.1.2,<0.2"
openai-whisper = ">=20231117"

# Visualization & logging
matplotlib = ">=3.7.5"
rich = ">=13.7.1"
tensorboard = ">=2.14.0"

# ONNX Runtime (optional, for optimized inference)
onnx = ">=1.16.0"
onnxruntime-gpu = ">=1.18.0"

# Training (optional, Linux only - deepspeed only works on Linux)
deepspeed = ">=0.15.1"
lightning = ">=2.2.4"

# Advanced optimizations
bitsandbytes = ">=0.45.0"
accelerate = ">=1.2.0"

# TensorRT (optional, Linux only for GPU acceleration)
# Note: TensorRT packages require manual installation for specific GPU architectures

[tool.pixi.pypi-options]
extra-index-urls = [
    "https://download.pytorch.org/whl/cu121",
    "https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-12/pypi/simple/"
]

# ============================================================================
# Pixi Tasks
# ============================================================================

[tool.pixi.tasks]
# Model download
download-model = """python -c "
from modelscope import snapshot_download
print('Downloading Fun-CosyVoice3-0.5B-2512...')
snapshot_download('FunAudioLLM/Fun-CosyVoice3-0.5B-2512', local_dir='pretrained_models/Fun-CosyVoice3-0.5B')
print('Model downloaded to pretrained_models/Fun-CosyVoice3-0.5B')

from modelscope import snapshot_download
print('Downloading CosyVoice-ttsfrd...')
snapshot_download('iic/CosyVoice-ttsfrd', local_dir='pretrained_models/CosyVoice-ttsfrd')
print('Model downloaded to pretrained_models/CosyVoice-ttsfrd')
"
"""

# Run example with voice cloning
example = "python example.py"

# Start web UI
webui = "python webui.py --port 8000"

# Development server with auto-reload
dev = "python webui.py --port 8000"

# Run tests (placeholder)
test = "python -c \"print('No tests configured yet')\""

# Lint check
lint = "python -m py_compile cosyvoice/cli/cosyvoice.py cosyvoice/cli/model.py"

# Export model to JIT
export-jit = "python cosyvoice/bin/export_jit.py"

# Export model to ONNX
export-onnx = "python cosyvoice/bin/export_onnx.py"

# ============================================================================
# Feature Environments (optional configurations)
# ============================================================================

[tool.pixi.feature.cuda.dependencies]
pytorch-cuda = "12.1.*"

[tool.pixi.feature.cpu.dependencies]
pytorch = {version = ">=2.3.0", channel = "pytorch"}

[tool.pixi.environments]
default = ["cuda"]
cpu = ["cpu"]
