[package]
name = "cosyvoice-bridge-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cosyvoice-bridge-server"
path = "src/main.rs"

# We don't need a lib section for the binary unless we export things

[dependencies]
# Workspace dependencies
shared = { path = "../shared" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
pyo3.workspace = true
numpy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
tikv-jemallocator.workspace = true
thiserror.workspace = true
hound.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
bytes = "1.9"

[features]
default = []
