[package]
name = "cosyvoice-client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cosyvoice-client"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
shared = { path = "../shared" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
clap.workspace = true
hound.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Additional
bytes = "1.9"
futures = "0.3"
anyhow.workspace = true
