[package]
name = "cosyvoice-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cosyvoice-server"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
shared = { path = "../shared" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
pyo3.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
tikv-jemallocator.workspace = true
thiserror.workspace = true
hound.workspace = true
anyhow.workspace = true
dotenvy.workspace = true

# Additional
bytes = "1.9"
